<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SocketMap</string>
    <string name="profile">Профиль</string>
    <string name="rating">Рейтинг</string>
    <string name="map">Карта</string>
    <string name="registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="phone">Контактный телефон</string>
    <string name="city">Город</string>
    <string name="name">Имя</string>
    <string name="pass">Пароль</string>
    <string name="pass_again">Пароль еще раз</string>
    <string name="visits">Мои посещения</string>
    <string name="reactions">Мои реакции</string>
    <string name="marks">Мои отметки</string>
    <string name="count_visits">Количество посещений: </string>
    <string name="count_rating">Количество отзывов: </string>
    <string name="search">Поиск розетки...</string>
    <string name="edit_info">Редактировать</string>
    <string name="register">Зарегистрироваться</string>
    <string name="edit_rating">Изменить оценку</string>
    <string name="enter">Войти</string>
    <string name="welcome">Добро пожаловать!
        Заполните регистрационную форму.</string>
    <string name="welcome2">Добро пожаловать!
        Войдите в учетную запись.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="socketmap">SocketMap</string>
    <string name="enter_text">Войдите в учетную запись.</string>
    <string name="enter_t">Вход</string>
    <string name="add_rating">Добавить рейтинг</string>
    <string name="no_text">не указан</string>
    <string name="number_phone">Контактный телефон:</string>
    <string name="email_field">Email:</string>
    <string name="city_field">Город:</string>
    <string name="description">Описание</string>
    <string name="addres">Адрес</string>
    <string name="create_description">Создайте описание вашему месту</string>
    <string name="add_place">Добавить место на карту</string>
    <string name="count">Количество отзывов:</string>
    <string name="description2">Описание</string>
    <string name="address">Адрес</string>
    <string name="add_ratings">Добавить рейтинг</string>
    <string name="search_socket">Поиск розетки...</string>
</resources>