<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="24dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/collapsed_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:id="@+id/app_name"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/welcome2"
            android:textAppearance="@style/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:id="@+id/welcome"
            />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/icon"
            android:tint="@color/green_main"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_width="185dp"
            android:background="@drawable/button"
            android:textColor="@color/black"
            android:textAppearance="@style/title"
            android:id="@+id/btn_sign"
            android:text="@string/enter" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_width="185dp"
            android:background="@drawable/button"
            android:textColor="@color/black"
            android:textAppearance="@style/title"
            android:id="@+id/btn_reg"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>