<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="76dp"
        android:scrollbars="none">

        <LinearLayout
            style="@style/app_style"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:id="@+id/main"
            android:layout_marginBottom="80dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/profile"
                android:textAppearance="@style/collapsed_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:id="@+id/app_profile"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@id/main"
                app:layout_constraintLeft_toLeftOf="@id/main"
                app:layout_constraintRight_toRightOf="@id/main"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_margin="14dp"
                android:layout_gravity="center_horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="@style/name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="24dp"
                    android:id="@+id/profile_name"
                    android:layout_weight="2"
                    />

                <ImageView
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:src="@drawable/profile_noimage"
                    android:layout_marginLeft="100dp"
                    android:layout_weight="0"
                    app:tint="@color/green_main" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Город: "
                    android:textAppearance="@style/title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_city"
                    />

                <EditText
                    android:id="@+id/profile_city_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/title"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:text="@string/city" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Email: "
                    android:textAppearance="@style/title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_email"
                    />

                <EditText
                    android:id="@+id/profile_email_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/title"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:text="@string/email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Контактный телефон: "
                    android:textAppearance="@style/title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_teleph"
                    />

                <EditText
                    android:id="@+id/profile_teleph_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/title"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:text="не указан" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_width="185dp"
                android:background="@drawable/button"
                android:textColor="@color/black"
                android:textAppearance="@style/title"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btn_edit_info"
                android:text="@string/edit_info" />

        </LinearLayout>
    </ScrollView>

    <View
        app:layout_constraintBottom_toTopOf="@id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_main"
        android:layout_below="@id/horizontal_scroll_view"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginBottom="6dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/horizontal_layout"
            android:layout_gravity="center"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/rating_icon"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    app:tint="@color/gray_main"
                    android:src="@drawable/rating_icon"
                    />

                <TextView
                    android:id="@+id/rating_icon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textAppearance="@style/main"
                    android:textColor="@color/gray_main" />
            </FrameLayout>

            <FrameLayout
                android:layout_weight="1"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginBottom="11dp"
                    android:id="@+id/map_icon"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:tint="@color/gray_main"
                    android:src="@drawable/map_icon"
                    />

                <TextView
                    android:id="@+id/map_icon_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/map"
                    android:textAppearance="@style/main"
                    android:layout_gravity="bottom|center_horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/map_icon"
                    android:textColor="@color/gray_main"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginBottom="11dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:tint="@color/green_main"
                    android:id="@+id/profile_icon"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profile_icon"
                    />

                <TextView
                    android:id="@+id/profile_icon_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/profile"
                    android:textAppearance="@style/main"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textColor="@color/green_main"
                    />

            </FrameLayout>

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
