<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    tools:context=".ProfileActivity">

    <LinearLayout
        style="@style/app_style"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="24dp"
        android:id="@+id/main"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rating"
            android:textAppearance="@style/collapsed_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:id="@+id/app_profile"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/main"
            app:layout_constraintLeft_toLeftOf="@id/main"
            app:layout_constraintRight_toRightOf="@id/main"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:weightSum="3">

            <EditText
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:id="@+id/search_field"
                android:hint="  Поиск розетки..."
                android:background="@drawable/card"
                android:paddingRight="6dp"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/gray_text"
                android:textSize="16sp"
                android:layout_weight="3"/>

            <ImageView
                android:layout_marginLeft="8dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/search"
                android:id="@+id/search"
                android:background="@drawable/card"
                android:tint="@color/gray_text" />

            <ImageButton
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rating"
                android:id="@+id/sort_button"
                android:background="@drawable/card"
                android:tint="@color/gray_text" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

    <View
        app:layout_constraintBottom_toTopOf="@id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_main"
        android:layout_below="@id/horizontal_scroll_view"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toTopOf="@id/horizontal_layout_text">

        <LinearLayout
            android:id="@+id/horizontal_layout"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rating_icon"
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/green_main"
                android:src="@drawable/rating_icon"
                />

            <ImageView
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:id="@+id/map_icon"
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/gray_main"
                android:src="@drawable/map_icon"
                />

            <ImageView
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/gray_main"
                android:id="@+id/profile_icon"
                android:src="@drawable/profile_icon"
                />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/horizontal_layout_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/rating_icon_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rating"
            android:textAppearance="@style/main"
            android:textAlignment="center"
            android:textColor="@color/green_main"
            />

        <TextView
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/map_icon_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/map"
            android:textAppearance="@style/main"
            android:textAlignment="center"
            android:textColor="@color/gray_main"
            />

        <TextView
            android:id="@+id/profile_icon_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/profile"
            android:textAppearance="@style/main"
            android:textAlignment="center"
            android:textColor="@color/gray_main"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>